--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         </div>
                     </div>
                     <div class="row  between align-center">
-                        <p class="product-text" href="#">Studio Design</p>
+                        <p class="product-text">Studio Design</p>
                         <ul class="row align-center">
                             <li class="stars-list"><i class='bx bxs-star' ></i></li>
                             <li class="stars-list"><i class='bx bxs-star' ></i></li>
@@ -147,7 +147,7 @@
                       </div>
                     </div>
                     <div class="row align-center between">
-                        <p class="product-text" href="#">Studio Design</p>
+                        <p class="product-text">Studio Design</p>
                         <ul class="row align-center">
                             <li class="stars-list"><i class='bx bxs-star' ></i></li>
                             <li class="stars-list"><i class='bx bxs-star' ></i></li>
@@ -172,7 +172,7 @@
                       </div>
                     </div>
                     <div class="row align-center between">
-                        <p class="product-text" href="#">Graphic Corner</p>
+                        <p class="product-text">Graphic Corner</p>
                         <ul class="row align-center">
                             <li class="stars-list"><i class='bx bxs-star' ></i></li>
                             <li class="stars-list"><i class='bx bxs-star' ></i></li>
@@ -194,7 +194,7 @@
                       </div>
                     </div>
                     <div class="row align-center between">
-                        <p class="product-text" href="#">Graphic Corner</p>
+                        <p class="product-text">Graphic Corner</p>
                         <ul class="row align-center">
                             <li class="stars-list"><i class='bx bxs-star' ></i></li>
                             <li class="stars-list"><i class='bx bxs-star' ></i></li>
@@ -216,7 +216,7 @@
                       </div>
                     </div>
                     <div class="row align-center between">
-                        <p class="product-text" href="#">Graphic Corner</p>
+                        <p class="product-text">Graphic Corner</p>
                         <ul class="row align-center">
                             <li class="stars-list"><i class='bx bxs-star' ></i></li>
                             <li class="stars-list"><i class='bx bxs-star' ></i></li>
@@ -238,7 +238,7 @@
                     </div>
                    </div>
                     <div class="row align-center between">
-                        <p class="product-text" href="#">Studio Design</p>
+                        <p class="product-text">Studio Design</p>
                             <ul class="row align-center">
                                 <li class="stars-list"><i class='bx bxs-star' ></i></li>
                                 <li class="stars-list"><i class='bx bxs-star' ></i></li>
@@ -260,7 +260,7 @@
                     </div>
                    </div> 
                    <div class="row align-center between">
-                    <p class="product-text" href="#">Studio Design</p>
+                    <p class="product-text">Studio Design</p>
                         <ul class="row align-center">
                             <li class="stars-list"><i class='bx bxs-star' ></i></li>
                             <li class="stars-list"><i class='bx bxs-star' ></i></li>
@@ -282,7 +282,7 @@
                       </div>
                     </div>
                     <div class="row align-center between">
-                        <p class="product-text" href="#">Studio Design</p>
+                        <p class="product-text">Studio Design</p>
                         <ul class="row align-center">
                             <li class="stars-list"><i class='bx bxs-star' ></i></li>
                             <li class="stars-list"><i class='bx bxs-star' ></i></li>
@@ -304,7 +304,7 @@
                       </div>
                     </div>
                     <div    class="row align-center between">
-                        <p class="product-text" href="#">Studio Design</p>
+                        <p class="product-text">Studio Design</p>
                         <ul class="row align-center">
                             <li class="stars-list"><i class='bx bxs-star' ></i></li>
                             <li class="stars-list"><i class='bx bxs-star' ></i></li>
@@ -326,7 +326,7 @@
                       </div>
                     </div>
                     <div class="row align-center between">
-                        <p class="product-text" href="#">Studio Design</p>
+                        <p class="product-text">Studio Design</p>
                         <ul class="row align-center">
                             <li class="stars-list"><i class='bx bxs-star' ></i></li>
                             <li class="stars-list"><i class='bx bxs-star' ></i></li>
